[project]
name = "py-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.120.4",
    "hachoir>=3.3.0",
    "httpx>=0.28.1",
    "python-telegram-bot==22.5",
    "pytube>=15.0.0",
    "pytube3>=9.6.4",
    "pytubefix>=10.1.1",
    "telethon>=1.41.2",
]
